style html content

--- a/style.css
+++ b/style.css
@@ -6,22 +6,136 @@
 
 :root {
   --border-cards: 0.013rem solid #d9d9d9;
-  --border-radius-cards: 0.17rem;
+  --border-radius-cards: 0.53rem;
   --background-color-cards: snow;
+  --font-color: #191919;
+  --font-color-description-education: #666666;
 }
 
 html {
   margin: 0px;
-  background-color: #f0efec;
-  _display: flex;
-  _align-content: center;
 }
 
-.content-card,
-.header-card {
+body {
+  background-color: #f0efec;
+  font-family: "Roboto", sans-serif;
+  color: var(--font-color);
+}
+.header-container,
+.header-content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.content-container,
+.header-container {
   margin: 2rem;
-  padding: 3rem;
+  padding: 0.25rem;
   background-color: var(--background-color-cards);
   border: var(--border-cards);
   border-radius: var(--border-radius-cards);
+}
+
+.incognito-button-right {
+  margin-left: 0.75rem;
+  color: #5e5e5e;
+  font-weight: bold;
+  font-style: 700;
+  font-size: 1.15rem;
+
+  background-color: transparent;
+  border: none;
+
+  /* hover Button padding smaller*/
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+
+  padding-top: 0.05rem;
+  padding-bottom: 0.05rem;
+}
+
+.incognito-button-right:hover {
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #ebebeb;
+}
+
+.description-people-you-know,
+.pending-number {
+  margin-left: 0.75rem;
+}
+
+.contact-card {
+  margin-top: 0.75rem;
+  margin-left: 0.5rem;
+  width: 10rem;
+  height: 17rem;
+
+  background-color: snow;
+  border: 0.003rem solid #d9d9d9;
+  border-radius: 0.25rem;
+
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-card:hover {
+  box-shadow: -2px -1px 15px -7px rgba(28, 28, 28, 0.74);
+  -webkit-box-shadow: -2px -1px 15px -7px rgba(28, 28, 28, 0.74);
+  -moz-box-shadow: -2px -1px 15px -7px rgba(28, 28, 28, 0.74);
+}
+.profil-header {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profil-background-img {
+  background-color: rgb(234, 240, 240);
+  width: 9.9rem;
+  height: 4rem;
+}
+
+.profil-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 4rem;
+  height: 4rem;
+  background: rgb(172, 172, 172);
+  border-radius: 50%;
+}
+
+.delete-contact {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: rgba(141, 141, 141, 0.274);
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.delete-icon {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.connect-button {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+
+  font-size: 12px;
+  font-style: 700;
+  border: solid 0.075rem #2b65bc;
+  border-radius: 2rem;
+  background-color: snow;
+}
+
+.connect-button:hover {
+  background-color: #e5f0fd;
+  border: solid 0.015rem #2b65bc;
 }
